ChangeLog:
--------------------
[1.0.14]

[1.0.13] 2021-11-20
- add satellite data from fastsatfinder.com
- add --input-charset option

[1.0.12] 2021-03-29
- modulation strings for the dvbv5 output

[1.0.11] 2021-03-11
- work around iconv on FreeBSD not knowing about ISO-6397-2
- better XML tunning and channel data generation

[1.0.10] 2021-03-05
- generate initial tuning data output for dvbv5-scan
- updated "satellites.dat" file

[1.0.9] 2020-05-16
- support compilation with -fno-common (default in GCC 10)

[1.0.8] 2020-04-20
- Kaffeine output support was removed 6 years ago. Bring the docs up to speed.

[1.0.7] 2020-01-25
- fix "--output-initial"

[1.0.6] 2019-12-13
- re-enable VHF band III in Europe

[1.0.5] 2019-03-14
- added new arguments for isdb-tb tuners (tested with MyGica S2870 & PlayTV USB Hybrid PV-B308U)

[1.0.4] 2018-10-23
- replace country-based DVB-T skipping with new command line arguments:
  -ft1 and -ft2 to scan only DVB-T or DVB-T2, respectively

[1.0.3] 2018-10-13, contributed by DF5EQ
- DVB-T scanning is skipped for AT, DE and CO
- DVB_T2 scanning is no longer skipped at all, but a mechanism is in place for
  doing it by country
- PLP ID 1 is enabled for AT
- some manual code formatting in scan.c, where the line length limits of the
  formatting script rendered the code hard to read

[1.0.2] 2018-06-17
 - move the source files in a "src" subdirectory
 - apply some of the Linux kernel coding style indentation using the Lindent
   script from the kernel tree
 - merge w_scan-20170107

[1.0.1] 2017-03-29
 - fix a corner case where a pair of transponders kept adding each other to
   the scanning loop, without ending up in any list we use for avoiding them
   in the future. The end result was an endless loop. Thanks
   https://github.com/mfyorp for reporting the bug and testing the fix.

[1.0.0] 2016-10-14
 - project forked from http://wirbel.htpc-forum.de/w_scan/index2.html and renamed w_scan2